--- a/style.css
+++ b/style.css
@@ -34,9 +34,22 @@ body {
   color: #10439f;
   font-weight: bold;
 }
+.percentage{
+  color:blue;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  border: 2px solid blue;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  margin: auto;
+  margin-top: 50px;
+}
 .options {
   margin-top: 50px;
-  display: none;
+  display: flex;
   flex-direction: column;
   font-size: 17px;
 }
@@ -62,6 +75,16 @@ body {
   border-radius: 5px;
   transition: 0.3;
 }
+
 .submit button:hover{
     background-color: #052258;
+}
+#finishbtn{
+  background-color: green;
+  display: none;
+}
+@media only screen and (max-width:520px) {
+  .container{
+    width: 70%;
+  }
 }
